2008-09-28  Bradley M. Kuhn  <bkuhn@ebb.org>

	* pokernetwork/tourneyattrs.py (TourneyAttrsEmptyLookup): Create
	default class.x

	* pokernetwork/userstats.py (UserStatsEmptyLookup): Created
	default class.

	* tests/test-tourneyattrs.py.in
	(PokerTourneyAttrsTestCase.test02_tourneyAttrsSponsoredPrizesAccessor):
	No longer use schedule_serial.

	* tests/test-pokeravatar.py.in
	(PokerAvatarTestCase.tourneySelect): Added test for ATTRS packets.

	* pokernetwork/pokeravatar.py (PokerAvatar.handlePacketLogic):
	Added send of TourneyAttrsList packet as well.

	* tests/test-tourneyattrs.py.in
	(PokerTourneyAttrsTestCase.test03_tourneyAttrsSponsoredPrizesLookupClass):
	Fixed test.

	* pokernetwork/tourneyattrs.py
	(TourneyAttrsSponsoredPrizesLookup.getAttrsAsPacket): tourney is
	not supposed to be an object.

	* pokernetwork/pokerpackets.py (PacketPokerTourneyAttrsList):
	Created new packet.

	* tests/test-pokerservice.py.in (PokerServiceTestCase.configValues):
	Added <tourney_attrs> tests.
	(PokerServiceTestCase.test00_09_configValues): Wrote test.
	(PokerServiceTestCase.test00_10_configValues): Wrote test.
	(PokerServiceTestCase.test00_11_configValues): Wrote test.
	(PokerServiceTestCase.test00_01_configValues): Renamed test.
	(PokerServiceTestCase.test00_02_configValues): Renamed test.
	(PokerServiceTestCase.test00_03_configValues): Renamed test.
	(PokerServiceTestCase.test00_4_badLocaleObject): Renamed test.
	(PokerServiceTestCase.test00_05_configValues): Renamed test.
	(PokerServiceTestCase.test00_06_configValues): Renamed test.
	(PokerServiceTestCase.test00_07_configValues): Renamed test.
	(PokerServiceTestCase.test00_08_configValues): Renamed test.

	* pokernetwork/pokerservice.py
	(PokerService.getTourneyAttrsLookup): Wrote method.
	(PokerService.getUserStatsLookup): Changed to use dict.
	(PokerService.__init__): Added TourneyAttrsFactory and
	<tourney_attrs> field support.

	* tests/test-pokertable.py.in